--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content padding>
+
   <ion-card *ngFor="let item of cardItems">
     <ion-card-content>
       <ion-card-title>
@@ -17,11 +18,11 @@
     <ion-row no-padding>
       <ion-col text-right>
         <button ion-button clear small icon-start (click)="viewStore(item)">
-         <!-- <ion-icon name='home'></ion-icon> -->
+          <ion-icon name='eye'></ion-icon> 
          មើល
        </button>
        <button ion-button clear small icon-start (click)="addPoint(item)">
-        <!-- <ion-icon name='home'></ion-icon> -->
+         <ion-icon name='star'></ion-icon> 
         រាប់ពិន្ទុ
       </button>
     </ion-col>
