--- a/src/pages/point-detail/point-detail.html
+++ b/src/pages/point-detail/point-detail.html
@@ -27,7 +27,7 @@
     <ion-item>
       <h2>600 Pts - ឈុតចាំបាច់សម្រាប់តាំង </h2>
     </ion-item>
-    <img src="../../assets/img/u1-s-m.jpg">
+    <!-- <img src="../../assets/img/u1-s-m.jpg"> -->
     <img src="../../assets/img/uu1.jpg">
 
     <ion-card-content>
@@ -39,7 +39,7 @@
     <ion-item>
       <h2>1000 Pts - ឈុតព្យួរផលិតផល</h2>
     </ion-item>
-    <img src="../../assets/img/u1-s-h.jpg">
+   <!--  <img src="../../assets/img/u1-s-h.jpg"> -->
     <img src="../../assets/img/uu2.jpg">
 
     <ion-card-content>
@@ -51,7 +51,7 @@
     <ion-item>
       <h2>3000 Pts - ឈុតសម្រាប់តាំងលើធ្វើរ</h2>
     </ion-item>
-    <img src="../../assets/img/u1-s-s.jpg">
+    <!-- <img src="../../assets/img/u1-s-s.jpg"> -->
     <img src="../../assets/img/uu3.jpg">
 
     <ion-card-content>
