--- a/src/pages/add-point/add-point.html
+++ b/src/pages/add-point/add-point.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the PointDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar primary>
@@ -19,53 +13,52 @@
   <ion-card>
 
     <ion-card-header>
-     ហាក់ ស្រ៊ុន
-   </ion-card-header>
+      ហាក់ ស្រ៊ុន
+    </ion-card-header>
 
- </ion-card>
+  </ion-card>
 
- <ion-card>
-  <ion-item>
-  <h2>ឈុតចាំបាច់សំរាប់តាំង</h2>
-  </ion-item>
-  <!-- <img src="../../assets/img/u1-s-m.jpg"> -->
-  <img src="../../assets/img/uu1.jpg">
-  <ion-card-content>
-   <ion-item>
-      <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
-    </ion-item>
-
-  </ion-card-content>
-</ion-card>
-
-<input type="file" #fileInput style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage($event)" />
-<ion-card>
-  <ion-item>
-  <h2>ឈុតព្យួរផលិតផល</h2>
-  </ion-item>
-  <!-- <img src="../../assets/img/u1-s-h.jpg"> -->
-  <img (click)="getPicture1()" src="{{imgSrc1}}">
-  <ion-card-content>
-  <ion-item>
-      <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
-    </ion-item>
-
-  </ion-card-content>
-</ion-card>
-
-<ion-card>
-  <ion-item>
-  <h2>ឈុតសម្រាប់តាំងលើធ្វើរ</h2>
-  </ion-item>
-  <!-- <img src="../../assets/img/u1-s-s.jpg"> -->
-  <img (click)="getPicture2()" src="{{imgSrc1}}">
-  <ion-card-content>
+  <ion-card>
     <ion-item>
-      <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+      <h2>ឈុតចាំបាច់សំរាប់តាំង</h2>
     </ion-item>
+    <!-- <img src="../../assets/img/u1-s-m.jpg"> -->
+    <img src="../../assets/img/uu1.jpg">
+    <ion-card-content>
+      <ion-item>
+        <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+      </ion-item>
 
-  </ion-card-content>
-</ion-card>
+    </ion-card-content>
+  </ion-card>
 
-<button ion-button block (click)="toStoreDetail()">បញ្ជូន</button>
+  <input type="file" #imageFile1 style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage1($event)" />
+  <ion-card>
+    <ion-item>
+      <h2>ឈុតព្យួរផលិតផល</h2>
+    </ion-item>
+    <img (click)="getPicture1()" src="{{imgSrc1}}">
+    <ion-card-content>
+      <ion-item>
+        <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+      </ion-item>
+
+    </ion-card-content>
+  </ion-card>
+
+  <input type="file" #imageFile2 style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage2($event)" />
+  <ion-card>
+    <ion-item>
+      <h2>ឈុតសម្រាប់តាំងលើធ្វើរ</h2>
+    </ion-item>
+    <img (click)="getPicture2()" src="{{imgSrc2}}">
+    <ion-card-content>
+      <ion-item>
+        <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+      </ion-item>
+
+    </ion-card-content>
+  </ion-card>
+
+  <button ion-button block (click)="toStoreDetail()">បញ្ជូន</button>
 </ion-content>
