--- a/src/pages/store-detail/store-detail.html
+++ b/src/pages/store-detail/store-detail.html
@@ -26,8 +26,8 @@
     </ion-card-title>
     <ion-grid>
       <ion-row>
-        <ion-col col-6><ion-icon name="ios-contact"></ion-icon> haksrun</ion-col>
-        <ion-col col-6>*** password123</ion-col>
+        <ion-col col-6><ion-icon name="ios-contact"></ion-icon> haksrun091221221</ion-col>
+        <ion-col col-6><ion-icon name="ios-lock"></ion-icon> 123456</ion-col>
       </ion-row>
     </ion-grid>
 
@@ -41,7 +41,7 @@
 </ion-card-content>
 </ion-card>
 <ion-list padding>
- <button (click)=pointDetail() ion-item *ngFor="let sp of storePoints">
+ <button color="{{sp.edit ? '' : 'light'}}" (click)=pointDetail() ion-item *ngFor="let sp of storePoints">
   <h2>{{sp.points}} Pts</h2>
   <ion-note item-end>{{sp.date}}</ion-note>
 </button>
