add camera upload

--- a/src/pages/add-point/add-point.html
+++ b/src/pages/add-point/add-point.html
@@ -60,5 +60,5 @@
     </ion-card-content>
   </ion-card>
 
-  <button ion-button block (click)="toStoreDetail()">បញ្ជូន</button>
+  <button ion-button block (click)="save()">បញ្ជូន</button>
 </ion-content>
