add dynamic component

--- a/src/pages/add-point/add-point.html
+++ b/src/pages/add-point/add-point.html
@@ -7,58 +7,112 @@
 </ion-header>
 
 
-<ion-content padding>
-
-
+<ion-content>
   <ion-card>
 
     <ion-card-header>
-      ហាក់ ស្រ៊ុន
+      {{store?.STORE?.name}} - {{store?.STORE?.STORE_TYPE?.name}}
     </ion-card-header>
+    <img src="{{storeImageUrl}}">
 
   </ion-card>
 
-  <ion-card>
-    <ion-item>
-      <h2>ឈុតចាំបាច់សំរាប់តាំង</h2>
-    </ion-item>
-    <!-- <img src="../../assets/img/u1-s-m.jpg"> -->
-    <img src="../../assets/img/uu1.jpg">
-    <ion-card-content>
-      <ion-item>
-        <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
-      </ion-item>
-
-    </ion-card-content>
-  </ion-card>
 
   <input type="file" #imageFile1 style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage1($event)" />
-  <ion-card>
-    <ion-item>
-      <h2>ឈុតព្យួរផលិតផល</h2>
-    </ion-item>
-    <img (click)="getPicture1()" src="{{imgSrc1}}">
-    <ion-card-content>
+  <ion-item-group>
+    <ion-item-divider color="primary">
+    ឈុតចាំបាច់សម្រាប់តាំង
+  </ion-item-divider>
+    <!-- Card Display -->
+    <!-- <ion-card>
       <ion-item>
-        <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+        ឈុតចាំបាច់សំរាប់តាំង
+        <button item-end ion-button small round icon-only color="danger" (click)="save()">
+          <ion-icon name="md-close"></ion-icon>
+        </button>
       </ion-item>
+      <img src="../../assets/img/uu1.jpg">
+      <div padding class="flex-container">
+        <h1 class="points" color="flex-center">{{points}}</h1>
+      </div>
+      <ion-item>
+        <ion-range min="0" step="10" snaps="true" [(ngModel)]="points">
+          <ion-label range-left class="small-text">0</ion-label>
+          <ion-label range-right>1800</ion-label>
+        </ion-range>
+      </ion-item>
+    </ion-card> -->
+    <!-- Card Display -->
+    <ion-card>
+      <ion-item>
+        ឈុតចាំបាច់សំរាប់តាំង
+        <button item-end ion-button small round icon-only color="danger" (click)="removeCard(2)">
+          <ion-icon name="md-close"></ion-icon>
+        </button>
+      </ion-item>
+      <img src="../../assets/img/take-photo.png">
+      <div padding class="flex-container">
+        <h1 class="points" color="flex-center">{{points}}</h1>
+      </div>
+      <ion-item>
+        <ion-range min="0" step="10" snaps="true" [(ngModel)]="points">
+          <ion-label range-left class="small-text">0</ion-label>
+          <ion-label range-right>1800</ion-label>
+        </ion-range>
+      </ion-item>
+    </ion-card>
+    <div #container></div>
+     <!-- <ion-card *ngFor="let card of cardDisplays" [innerHtml]="card | sanitizeHtml">
 
-    </ion-card-content>
-  </ion-card>
+    </ion-card> -->
+    <!-- Add -->
+    <div padding class="flex-container">
+      <div class="flex-center">
+        <button color="primary" ion-button round icon-only full (click)="addNewDisplay()">
+          <ion-icon name="ios-add"></ion-icon>
+        </button>
+      </div>
+    </div>
+  </ion-item-group>
+  <input type="file" #imageFile1 style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage1($event)" />
+  <ion-item-group>
+    <ion-item-divider color="primary">ឈុតផ្យួរផលិតផល</ion-item-divider>
+    <!-- <ion-card>
+      <ion-item>
+        <h2>ឈុតចាំបាច់សំរាប់តាំង</h2>
+        <button item-end ion-button small round color="danger" (click)="save()">លុប</button>
+      </ion-item>
+      <img src="../../assets/img/uu1.jpg">
+      <div padding class="flex-container">
+        <h1 class="points" color="flex-center">{{points}}</h1>
+      </div>
+      <ion-item>
+        <ion-range min="0" step="10" snaps="true" [(ngModel)]="points">
+          <ion-label range-left class="small-text">0</ion-label>
+          <ion-label range-right>1800</ion-label>
+        </ion-range>
+      </ion-item>
+    </ion-card> -->
+
+  </ion-item-group>
 
   <input type="file" #imageFile2 style="visibility: hidden; height: 0px" name="files[]" (change)="processWebImage2($event)" />
-  <ion-card>
-    <ion-item>
-      <h2>ឈុតសម្រាប់តាំងលើធ្វើរ</h2>
-    </ion-item>
-    <img (click)="getPicture2()" src="{{imgSrc2}}">
-    <ion-card-content>
+  <ion-item-group>
+    <ion-item-divider color="primary">ឈុតសម្រាប់តាំងលើធ្នើរ</ion-item-divider>
+   <!--  <ion-card>
       <ion-item>
-        <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+        <h2>ឈុតចាំបាច់សំរាប់តាំង</h2>
       </ion-item>
+      <img src="../../assets/img/uu1.jpg">
+      <ion-card-content>
+        <ion-item>
+          <ion-input type="text" placeholder="ពិន្ទុ"></ion-input>
+        </ion-item>
 
-    </ion-card-content>
-  </ion-card>
-
-  <button ion-button block (click)="save()">បញ្ជូន</button>
+      </ion-card-content>
+    </ion-card> -->
+  </ion-item-group>
+  <div padding>
+    <button ion-button round padding block (click)="save()">បញ្ជូន</button>
+  </div>
 </ion-content>
