--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,26 +6,26 @@
 
 <ion-content padding>
 
-  <ion-card *ngFor="let item of cardItems">
+  <ion-card *ngFor="let store of stores">
     <ion-card-content>
       <ion-card-title>
-        {{item.storetype}}
+       {{store.STORE.name}}
       </ion-card-title>
       <p>
-        {{item.storename}} - {{item.location}}
+        {{store.STORE.STORE_TYPE.name}}
       </p>
     </ion-card-content>
     <ion-row no-padding>
       <ion-col text-right>
-       <button ion-button clear small icon-start (click)="viewClaimReward(item)">
+       <button ion-button clear small icon-start (click)="viewClaimReward(store)">
         <ion-icon name='md-color-palette'></ion-icon>
         រង្វាន់
       </button>
-      <button ion-button clear small icon-start (click)="viewStore(item)">
+      <button ion-button clear small icon-start (click)="viewStore(store)">
         <ion-icon name='eye'></ion-icon>
         មើល
       </button>
-      <button ion-button clear small icon-start (click)="addPoint(item)">
+      <button ion-button clear small icon-start (click)="addPoint(store)">
        <ion-icon name='star'></ion-icon>
        រាប់ពិន្ទុ
      </button>
