--- a/src/pages/add-point/add-point.html
+++ b/src/pages/add-point/add-point.html
@@ -14,8 +14,8 @@
     <ion-card-header>
       {{store?.name}} - {{store?.STORE_TYPE.name}}
     </ion-card-header>
-    <img src="{{imageUrl}}" *ngIf="imageUrl" (click)="getPicture()">
-    <!-- <img src="{{pathForImage(imageUrl)}}" *ngIf="imageUrl" (click)="getPicture()"> -->
+    <!-- <img src="{{imageUrl}}" *ngIf="imageUrl" (click)="getPicture()"> -->
+    <img src="{{pathForImage(imageUrl)}}" *ngIf="imageUrl" (click)="getPicture()">
     <div padding class="flex-container" *ngIf="imageUrl == null">
       <button color="light" class="flex-center" ion-button icon-start round padding icon-only (click)="getPicture()">
        <ion-icon name="camera"></ion-icon>
@@ -38,8 +38,8 @@
         <ion-icon name="md-close"></ion-icon>
       </button>
     </ion-item>
-    <!-- <img src="{{pathForImage(store?.imageUrl)}}" (click)="showDisplayModal(store)"> -->
-    <img src="{{store?.imageUrl}}" (click)="showDisplayModal(store, dt)">
+    <img src="{{pathForImage(store?.imageUrl)}}" (click)="showDisplayModal(store)">
+    <!-- <img src="{{store?.imageUrl}}" (click)="showDisplayModal(store, dt)"> -->
     <ion-item>
       <div padding class="flex-container">
         <h1 class="points" color="flex-center">{{store?.points}} ពិន្ទុ</h1>
@@ -59,6 +59,9 @@
 
 
 <div padding>
+  <p>{{tp}}</p>
+   <p>{{url}}</p>
+   <p>{{op}}</p>
   <button ion-button round padding block (click)="save()">បញ្ជូន</button>
 </div>
 </ion-content>
