--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,6 +17,10 @@
     </ion-card-content>
     <ion-row no-padding>
       <ion-col text-right>
+       <button ion-button color="danger" clear small icon-start (click)="viewClaimReward(store)">
+        <ion-icon name='md-star'></ion-icon>
+        រួច
+      </button>
        <button ion-button clear small icon-start (click)="viewClaimReward(store)">
         <ion-icon name='md-color-palette'></ion-icon>
         រង្វាន់
