--- a/src/pages/add-point/add-point.html
+++ b/src/pages/add-point/add-point.html
@@ -44,6 +44,9 @@
       <div padding class="flex-container">
         <h1 class="points" color="flex-center">{{store?.points}} ពិន្ទុ</h1>
       </div>
+      <div padding class="flex-container">
+        <h2 class="points" color="flex-center">{{store?.conditionName}}</h2>
+      </div>
     </ion-item>
 
   </ion-card>
