--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="តូប" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="គំរូ" tabIcon="star"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="តូប" tabIcon="md-home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="គំរូ" tabIcon="md-star"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="រង្វាន់" tabIcon="md-color-palette"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="កំណត់" tabIcon="settings"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="កំណត់" tabIcon="md-settings"></ion-tab>
 </ion-tabs>
