--- a/src/pages/store-detail/store-detail.html
+++ b/src/pages/store-detail/store-detail.html
@@ -46,7 +46,7 @@
 </ion-card-content>
 </ion-card>
 <ion-list>
-  <button ion-item (click)="pointDetail(sp)" *ngFor="let sp of storePoints">
+  <button ion-item (click)="pointDetail(sp.storeImageId)" *ngFor="let sp of storePoints">
     {{sp?.total_points}} ពិន្ទុ
     <ion-note item-end>{{sp?.capturedAt}}</ion-note>
   </button>
